src/objects/Survey_Question__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <referenceTo>Survey_Header__c</referenceTo>
        <relationshipLabel>Survey Questions</relationshipLabel>
        <relationshipName>Survey_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Id__c</fullName>
        <label>Response Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Label__c</fullName>
        <description>This is the &quot;pipeline&quot; value in Survey Gizmo for matrix question group types.</description>
        <label>Row Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Survey Question</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Row Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>